--- a/certify/INSTALL.txt
+++ b/certify/INSTALL.txt
@@ -37,12 +37,11 @@ Configuration
   -- Edit certify.conf and set the hostsuri to point at your hosts.conf
   -- Edit hosts.conf and set all the site/individual specific info (e.g. smtp host, email addresses, etc.)
   
-  -- The default is to create a self-signed cert, so try that first.
+  -- The default is to create a cert signed by a self-signed dummy CA, so try that first:
         -- Create a single dummy host section, e.g. [myhost.mydomain.com]
         -- Run 'certify -c ~/.certify.conf -v -L ~/certify.log'
   
   -- Assuming that works, try using the SSHIOPlugin. 
-       
     -- Create a real host section, e.g. [myrealhost.mydomain.com]
     -- Set that host to use ioclass=SSHIOPlugin
     -- Be sure ssh-agent is running properly and you can log in to the target host(s)
